--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,12 @@ edition = "2021"
 
 [dependencies]
 yew = "0.19"
+wasm-bindgen = "0.2"
+js-sys = "0.3"
+
+[dependencies.web-sys]
+version = "0.3.57"
+features = [
+  "CanvasRenderingContext2d",
+  "HtmlCanvasElement",
+]
