--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 yew = "0.19"
+log = "0.4"
 wasm-bindgen = "0.2"
+wasm-logger = "0.2"
 js-sys = "0.3"
 
 [dependencies.web-sys]
