--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yew = "0.19"
-log = "0.4"
+console_error_panic_hook = "0.1"
 wasm-bindgen = "0.2"
-wasm-logger = "0.2"
-js-sys = "0.3"
 bevy = "0.7"
+log = "0.4"
+wasm-logger = "0.2"
 
 [dependencies.web-sys]
 version = "0.3.57"
