Add github action to build/publish the web build of the game

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
 			"settings": {},
 			"extensions": [
 				"rust-lang.rust-analyzer",
-				"dustypomerleau.rust-syntax"
+				"dustypomerleau.rust-syntax",
+				"github.vscode-github-actions"
 			]
 		}
 	},
