--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -35,7 +35,7 @@ jobs:
             rustup target add wasm32-unknown-unknown
         
         - name: Build the game
-          run: trunk build --release
+          run: trunk build --release --public-url "Roll-of-the-Die/"
 
         - name: Setup Pages
           uses: actions/configure-pages@v3
