--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 console_error_panic_hook = "0.1"
-wasm-bindgen = "=0.2.84"
-bevy = "0.7"
+wasm-bindgen = "0.2"
+bevy = "0.11.2"
 log = "0.4"
 wasm-logger = "0.2"
 
